adding a few links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
     <head></head>
-    <body></body>
+    <body>
+        <a href="https://www.linkedin.com/in/mairbek-tungaev-50a0b157/">LinkedIn</a>
+        <a href="https://www.last.fm/user/everjump">Last.fm</a>
+    </body>
 </html>
