--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
-        <a href="https://www.linkedin.com/in/mairbek-tungaev-50a0b157/">LinkedIn</a>
-        <a href="https://www.last.fm/user/everjump">Last.fm</a>
-    </body>
+<head>
+    <title>Visit card</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <a href="https://www.linkedin.com/in/mairbek-tungaev-50a0b157/">LinkedIn</a>
+    <a href="https://www.last.fm/user/everjump">Last.fm</a>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
