--- a/index.html
+++ b/index.html
@@ -21,29 +21,52 @@
             background: linear-gradient(45deg, #3b4f96, #800480, #808000, #4B5320);
             background-size: 200% 400%;
             animation: rotateBg 20s forwards infinite;
-            z-index: -21;
+            z-index: -2;
+        }
+
+        .bg-highlight {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            pointer-events: none;
+            z-index: 0;
+            background: transparent;
+            opacity: 0;
+            transition: background 0.15s ease;
+        }
+
+        .bg-highlight.breathing {
+            animation: breathing 3s ease-in-out infinite;
+        }
+
+        @keyframes breathing {
+            0% { opacity: 0.6; }
+            50% { opacity: 0.1; }
+            100% { opacity: 0.6; }
         }
 
         @keyframes rotateBg {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-
-            100% {
-                background-position: 0% 50%;
-            }
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         a {
             color: white;
             text-decoration: none;
         }
+
+        .container {
+            position: relative;
+            z-index: 1;
+        }
     </style>
+
     <div class="bg-rotate"></div>
+    <div class="bg-highlight"></div>
+
     <div class="container">
         <div class="row">
             <div class="col">
@@ -63,6 +86,24 @@
             </div>
         </div>
     </div>
+
+    <script>
+        const highlight = document.querySelector('.bg-highlight');
+
+        document.addEventListener('mousemove', e => {
+            const { clientX, clientY } = e;
+            highlight.style.background = `radial-gradient(circle 200px at ${clientX}px ${clientY}px, rgba(255,138,0,0.7), transparent)`;
+            if (!highlight.classList.contains('breathing')) {
+                highlight.classList.add('breathing');
+            }
+        });
+
+        document.addEventListener('mouseleave', () => {
+            highlight.style.background = "transparent";
+            highlight.classList.remove('breathing');
+        });
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
