im bored... and i cant sleep, so here is a little bit of nothing

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             color: white;
             text-decoration: none;
         }
-
+        img {
+            border-radius: 25px;
+        }
         .container {
             position: relative;
             z-index: 1;
@@ -72,16 +74,20 @@
             <div class="col">
                 <div class="mt-4"></div>
                 <h4>
-                    <img style="border-radius: 25px;" src="assets/linkedinlogo.png" />
+                    <img src="assets/linkedinlogo.png" />
                     <a href="https://www.linkedin.com/in/mairbek-tungaev-50a0b157/">LinkedIn</a>
                 </h4>
                 <h4>
-                    <img style="border-radius: 25px" src="assets/lastfmlogo.png" />
+                    <img src="assets/lastfmlogo.png" />
                     <a href="https://www.last.fm/user/everjump">Last.fm</a>
                 </h4>
                 <h4>
-                    <img style="border-radius: 25px" src="assets/githublogo.png" />
+                    <img src="assets/githublogo.png" />
                     <a href="https://github.com/mkotto">GitHub</a>
+                </h4>
+                <h4>
+                    <img src="assets/steamlogo.png" />
+                    <a href="https://steamcommunity.com/id/dewdar">Steam</a>
                 </h4>
             </div>
         </div>
